<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="CalculatorViewModel"
            type="com.githubzq99.simplecalculator.CalculatorViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.githubzq99.simplecalculator.MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_marginTop="150dp"
        style="@style/CalculationDisplayStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/ButtonLayoutId1"
            style="@style/ButtonRowStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button1"
                android:text="@string/buttonDigit7"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button2"
                android:text="@string/buttonDigit8"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button3"
                android:text="@string/buttonDigit9"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button4"
                android:text="@string/buttonOperatorDivide"
                style="@style/ButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ButtonLayoutId2"
            style="@style/ButtonRowStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button5"
                android:text="@string/buttonDigit4"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button6"
                android:text="@string/buttonDigit5"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button7"
                android:text="@string/buttonDigit6"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button8"
                android:text="@string/buttonOperatorMultiply"
                style="@style/ButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ButtonLayoutId3"
            style="@style/ButtonRowStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button9"
                android:text="@string/buttonDigit1"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button10"
                android:text="@string/buttonDigit2"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button11"
                android:text="@string/buttonDigit3"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button12"
                android:text="@string/buttonOperatorMinus"
                style="@style/ButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ButtonLayoutId4"
            style="@style/ButtonRowStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button13"
                android:text="@string/buttonSign"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button14"
                android:text="@string/buttonDigit0"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button15"
                android:text="@string/buttonPeriod"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button16"
                android:text="@string/buttonOperatorPlus"
                style="@style/ButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ButtonLayoutId5"
            style="@style/ButtonRowStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button17"
                android:text="@string/buttonClear"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button18"
                android:text="@string/buttonDelete"
                style="@style/ButtonStyle">
            </Button>
            <Button
                android:id="@+id/button20"
                android:text="@string/buttonEquals"
                style="@style/ButtonStyle">
            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>